my-app/src/css/messages.css
  body { 
    --side-header: #2986d6;
    --side-background: #0065af;
    --chat-list-svg: #8dceff;
  }

/* ------------ MESSAGE ------------*/

    #messages__list {
    display: flex;
    flex-direction: column;
    height: 100%;
  }

  .msg {
    background: var(--secondary);
    margin: 10px 100px 0px auto;
    padding: 15px;
    border-radius: 15px;
    position: relative;
  }

  .msg p {
    word-break: break-word;
  }

  .messages {
    margin: auto 0px 0px auto;
    width: 100%;
    max-height: calc(100vh - 166px);
    overflow: scroll;
  }

  .messages > * {
    display: block;
    margin: 0px;
  }

  .messages > * > div {
    display: flex;
    align-items: center;
  }

  .messages > div:last-of-type .msg:after {
    content: "";
    position: absolute;
    background-color: var(--secondary);
    border-top: 10px solid transparent;
    border-bottom: 10px solid var(--background);
    border-left: 10px solid var(--secondary);
    width: 0px;
    height: 0px;
    right: -5px;
    bottom: -5px;
    rotate: -90deg;
  }

  .messages > * > div > svg {
    font-size: 50px;
    color: var(--tertiary);
    margin: 0px 25px;
  }

  .messages > *:not(:last-of-type) > div > svg {
    display: none;
  }

  .messages > blockquote:last-of-type > div {
    flex-direction: row-reverse;
  }

  .messages > blockquote .msg {
    margin-right: auto;
    margin-left: 100px;
  }

  .messages > blockquote:last-of-type .msg:after {
    content: "";
    position: absolute;
    width: 0px;
    height: 0px;
    border-top: 10px solid transparent;
    border-bottom: 10px solid var(--secondary);
    border-left: 10px solid var(--secondary);
    background-color: transparent;
    left: -5px;
    rotate: -90deg;
  }

  .messages > blockquote:last-of-type .msg {
    margin-left: 0px;
  }

  .messages > div:last-of-type .msg {
    margin-right: 0px;
  }

  /*------------ DONE MESSAGE ------------*/


  /*------------ FORM ------------*/

  .form-msg {
    background-color: var(--primary);
    width: 100%;
    height: 100px;
    display: flex;
    align-items: center;
  }

  .form-msg input {
    width: 75%;
    margin: auto;
    margin-left: 50px;
    border: none;
    padding: 10px;
    border-radius: 25px;
  }

  .form-msg input:focus {
    outline: none;
  }

  .form-msg button {
    display: flex;
    justify-content: center;
    align-items: center;
    border: none;
    margin: 0px 100px;
    background-color: var(--background);
    border-radius: 50%;
    width: 54px;
    height: 54px;
    transition: all .3s;
  }

  .form-msg button:hover {
    transform: scale(1.1);
  }

  .form-msg button:active {
    transform: scale(0.95);
  }

  .form-msg button * {
    transition: all .3s;
    color: var(--tertiary);
    font-size: 40px;
  }

  .form-msg button:hover * {
    transform: scale(1.05) translateX(-0.5px) translateY(-1px);
  }
  
  .form-msg button:active * {
    transform: scale(0.9) translateX(2.5px) translateY(2px);
  }

  /*------------ DONE FORM ------------*/

  /*------------ CHAT LIST ------------*/

  #side {
    display: flex;
    flex-direction: column;
    min-width: 450px;
    background-color: var(--side-background);
  }

  #side > div {
    height: calc(100vh - 60px);
  }

  #side > header {
    background-color: var(--side-header);
    padding: 10px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }

  #side svg {
    font-size: 20px;
    color: var(--background);
  }

  #side > header div:has(.profile__photo) {
    margin-right: auto;
  }

  .profile__photo {
    height: 40px;
    width: 40px;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .profile__photo svg {
    font-size: 40px !important;
  }

  .chat__options {
    display: flex;
  }

  .chat__options div {
    width: 24px;
    height: 24px;
    border-radius: 50%;
    margin: 0px 6px 0px 8px;
    padding: 8px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    transition: all .3s;
  }

  .chat__options div:hover {
    background-color: var(--quart-bright);
  }

  #search__bar {
    padding: 10px;
  }

  #search__bar > div {
    background-color: var(--side-header);
    border-radius: 10px;
    height: 33px;
    display: flex;
    align-items: center;
  }

  #search__bar input {
    background-color: transparent;
    color: WHITE;
    font-size: 15px;
    border: none;
    height: 25px;
    width: 100%;
  }

  #search__bar input:focus {
    outline: none;
  }

  #search__bar input::placeholder {
    color: var(--chat-list-svg);
  }

  #search__bar svg {
    font-size: 15px;
    color: var(--chat-list-svg);
    margin: 0px 20px;
    cursor: pointer;
  }

  #chat__list > div {
    margin: 5px 0px;
    width: 100%;
    cursor: pointer;
    display: flex;
    flex-direction: row;
    height: 75px;
    transition: all .3s;
  }
  
  #chat__list > div svg {
    font-size: 50px;
  }

  #chat__list > div > div:first-child {
    height: 75px;
    min-width: 75px;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  #chat__list > div > div:last-child {
    margin-right: 15px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-bottom: 1px solid var(--side-header);
  }

  #chat__list > div:hover {
    background-color: var(--quart-bright);
  }

  #chat__list p {
    font-size: 15px;
    color: var(--chat-list-svg);
  }

  #chat__list h3 {
    margin: 0px;
    font-size: 20px;
    color: WHITE;
  }
  /*------------ DONE CHAT LIST ------------*/

